# logme

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  changelog.md  logme.sln  release.py
docs/: faq.md  (+6 more)
dynamic/: CMakeLists.txt  logmed.vcxproj  logmed.vcxproj.filters
examples/: CMakeLists.txt  README.md
examples/Basic/: Basic.cpp  Basic.vcxproj  Basic.vcxproj.filters  CMakeLists.txt  README.md
examples/CApi/: CApi.c  CMakeLists.txt  README.md
examples/CallbackBackend/: CMakeLists.txt  CallbackBackend.cpp  README.md
examples/ChannelSetup/: CMakeLists.txt  ChannelSetup.cpp  ChannelSetup.vcxproj  ChannelSetup.vcxproj.filters  README.md
examples/Channels/: CMakeLists.txt  Channels.cpp  Channels.vcxproj  Channels.vcxproj.filters  README.md
examples/Collapse/: CMakeLists.txt  ExampleCollapse.cpp  README.md
examples/DumpBuffer/: CMakeLists.txt  DumpBuffer.cpp  README.md
examples/DynamicControl/: CMakeLists.txt  DynamicControl.vcxproj  DynamicControl.vcxproj.filters  README.md  Worker.cpp  Worker.h  main.cpp
examples/EnvironmentControl/: CMakeLists.txt  EnvironmentControl.cpp  README.md
examples/FormatApi/: CMakeLists.txt  FormatApi.cpp  FormatApi.vcxproj  FormatApi.vcxproj.filters  README.md
examples/Multithread/: CMakeLists.txt  Multithread.cpp  Multithread.vcxproj  Multithread.vcxproj.filters  README.md
examples/OnceEvery/: CMakeLists.txt  OnceEvery.cpp  README.md
examples/OneTime/: CMakeLists.txt  OneTime.cpp  OneTime.vcxproj  OneTime.vcxproj.filters  README.md
examples/Override/: CMakeLists.txt  Override.cpp  Override.vcxproj  Override.vcxproj.filters  README.md
examples/Precheck/: CMakeLists.txt  Precheck.cpp  README.md
examples/Procedure/: CMakeLists.txt  Procedure.cpp  Procedure.vcxproj  Procedure.vcxproj.filters  README.md
examples/StructuredOutput/: CMakeLists.txt  README.md  StructuredOutput.cpp
examples/ThreadContext/: CMakeLists.txt  README.md  ThreadContext.cpp  ThreadContext.vcxproj  ThreadContext.vcxproj.filters
examples/TracePoints/: CMakeLists.txt  README.md  TracePoints.cpp
examples/TypicalUsage/: CMakeLists.txt  CodeConfiguration.cpp  ConfigFile.cpp  OutOfBox.cpp  README.md  typical-usage.json
examples/WindowsEventLogBackend/: CMakeLists.txt  README.md  WindowsEventLogBackend.cpp
examples/config/: config.json
logme/: CMakeLists.txt  logme.vcxproj  logme.vcxproj.filters
logme/include/Logme/: AllStatI.h  AnsiColorEscape.h  ArgumentList.h  Channel.h  Check.h  Colorizer.h  Context.h  ControlConfig.h  ControlPolicy.h  Convert.h  CrashLog.h  CritSection.h  DayChangeDetector.h  EnvironmentControl.h  FastFormat.h  GlogCompat.h  ID.h  Logger.h  Logme.h  LogmeC.h  MemoryUsageTracker.h  Module.h  ObfString.h  Obfuscate.h  OutputFlags.h  Override.h  Printer.h  Procedure.h  ReentryGuard.h  SID.h  SafeID.h  Ssl.h  Stream.h  Template.h  ThreadChannel.h  ThreadField.h  ThreadName.h  ThreadOverride.h  ThreadSubsystem.h  TracePoint.h  (+3 more)
logme/source/: BindAllStat.cpp  Channel.cpp  Check.cpp  Colorizer.cpp  Context.cpp  Control.cpp  Convert.cpp  CrashLog.cpp  CritSection.cpp  DayChangeDetector.cpp  Dump.cpp  Environment.cpp  FastFormat.cpp  IntJeaiii.cpp  Logger.cpp  LogmeC.cpp  MemoryUsageTracker.cpp  Module.cpp  Obfuscate.cpp  OutputFlags.cpp  Override.cpp  Printer.cpp  Procedure.cpp  ReentryGuard.cpp  SID.cpp  SafeID.cpp  Stream.cpp  StringHelpers.h  Template.cpp  ThreadChannel.cpp  ThreadField.cpp  ThreadName.cpp  ThreadOverride.cpp  ThreadSubsystem.cpp  TracePoint.cpp  Utils.cpp
logme/source/Backend/: Backend.cpp  BackendConfig.cpp  BufferBackend.cpp  BufferBackendConfig.cpp  CallbackBackend.cpp  CallbackBackendConfig.cpp  ConsoleBackend.cpp  ConsoleBackendConfig.cpp  ConsoleManager.cpp  ConsoleManagerFactory.cpp  DebugBackend.cpp  FileBackend.cpp  FileBackendConfig.cpp  FileManager.cpp  MemoryTrackedBackend.cpp  RingBufferBackend.cpp  RingBufferBackendConfig.cpp  SharedFileBackend.cpp  SharedFileBackendConfig.cpp  WindowsEventLogBackend.cpp  WindowsEventLogBackendConfig.cpp
tests/: CMakeLists.txt
tests/CApi/: CApiTest.c  CMakeLists.txt
tests/CallbackBackend/: CMakeLists.txt  CallbackBackendTest.cpp
tests/ChannelOutputLock/: CMakeLists.txt  ChannelOutputLock.cpp
tests/ChannelRedirect/: CMakeLists.txt  ChannelRedirect.cpp
tests/Collapse/: CMakeLists.txt  CollapseTest.cpp
tests/Common/: TestBackend.h  TestData.h
tests/ConsoleBackend/: CMakeLists.txt  ConsoleBackendTest.cpp
tests/ControlServerPolicy/: CMakeLists.txt  ControlServerPolicyTest.cpp
tests/EnvironmentControl/: CMakeLists.txt  EnvironmentControlTest.cpp
tests/FastFormat/: CMakeLists.txt  FastFormat.cpp
tests/FileArchivePolicy/: CMakeLists.txt  FileArchivePolicy.cpp
tests/FileBackendConfig/: CMakeLists.txt  FileBackendConfig.cpp
tests/FileBackendHotPath/: CMakeLists.txt  FileBackendHotPath.cpp
tests/FileBackendIntegration/: CMakeLists.txt  FileBackendIntegration.cpp
tests/FileBackendManager/: CMakeLists.txt  FileBackendManager.cpp
tests/FileManagerCounters/: CMakeLists.txt  FileManagerCounters.cpp
tests/GzipCompression/: CMakeLists.txt  GzipCompression.cpp
tests/LevelFilter/: CMakeLists.txt  LevelFilter.cpp
tests/LogmeWebManual/: CMakeLists.txt  README.md  main.cpp
tests/NoInRelease/: CMakeLists.txt  NoInReleaseBuild.cpp
tests/OutputFlags/: CMakeLists.txt  OutputFlags.cpp
tests/Precheck/: CMakeLists.txt  Precheck.cpp
tests/PreprocessorCompat/: CMakeLists.txt  PreprocessorCompat.cpp
tests/ProcedurePrint/: CMakeLists.txt  ProcedurePrint.cpp
tests/ProcessTemplate/: CMakeLists.txt  ProcessTemplate.cpp
tests/ReentryGuard/: CMakeLists.txt  ReentryGuard.cpp
tests/RetentionCleaner/: CMakeLists.txt  RetentionCleaner.cpp
tests/SingleEvaluation/: CMakeLists.txt  SingleEvaluation.cpp
tests/SizeLimitPolicy/: CMakeLists.txt  SizeLimitPolicy.cpp
tests/TestAll/: CMakeLists.txt  TestAll.cpp
tests/ThreadField/: CMakeLists.txt  ThreadField.cpp
tests/Tools/: CMakeLists.txt  Tools.cpp
tests/TracePoints/: CMakeLists.txt  TracePoints.cpp
tests/WindowsEventLogBackend/: CMakeLists.txt  WindowsEventLogBackendTest.cpp
(+133 files in other folders)
