add_subdirectory(Basic)
add_subdirectory(Channels)
add_subdirectory(Override)
add_subdirectory(FormatApi)
add_subdirectory(Multithread)
add_subdirectory(ChannelSetup)
add_subdirectory(Procedure)
add_subdirectory(TracePoints)
add_subdirectory(OneTime)
add_subdirectory(ThreadContext)
add_subdirectory(DynamicControl)
add_subdirectory(OnceEvery)
add_subdirectory(Collapse)
add_subdirectory(DumpBuffer)
add_subdirectory(Precheck)
add_subdirectory(EnvironmentControl)
add_subdirectory(StructuredOutput)
add_subdirectory(CApi)
add_subdirectory(TypicalUsage)
add_subdirectory(CallbackBackend)
if (MSVC)
  add_subdirectory(WindowsEventLogBackend)
endif()
