file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "source/*.cpp")
file(GLOB_RECURSE HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.h")
add_library(logme STATIC ${SOURCES} ${HEADERS}) 

if (NOT DEFINED LOGME_ENABLE_STD_FORMAT)
  set(LOGME_ENABLE_STD_FORMAT 0)
endif()

target_include_directories(logme PRIVATE 
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  ${ALLSTAT_INCLUDE_DIR}
)

target_compile_definitions(logme PRIVATE _WINSOCK_DEPRECATED_NO_WARNINGS _CRT_SECURE_NO_WARNINGS _LOGME_STATIC_BUILD_)
target_compile_definitions(logme PUBLIC LOGME_ENABLE_STD_FORMAT=${LOGME_ENABLE_STD_FORMAT})