message("CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
message("CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")

include_directories(${CMAKE_SOURCE_DIR}/tests)

set(GTEST true)
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "5.0.0")
    message("WARNING: Some tests are disabled due to version of GCC compiler !!!")
    set(GTEST false)
  endif()
endif()

if(GTEST)
  find_package(GTest CONFIG QUIET)
  if(NOT GTest_FOUND)
    find_package(GTest QUIET)
  endif()
  if (NOT GTest_FOUND)
    message("WARNING: GTest not found. gtest-based tests are disabled. Hint: configure with vcpkg toolchain or set GTest_DIR.")
  else()
    add_library(gtest INTERFACE)
    target_link_libraries(gtest INTERFACE GTest::gtest)

    add_library(gtest_main INTERFACE)
    target_link_libraries(gtest_main INTERFACE GTest::gtest_main)

    add_subdirectory(ChannelRedirect)
    add_subdirectory(LevelFilter)
    add_subdirectory(OutputFlags)
    add_subdirectory(ProcedurePrint)
  endif()
endif()

add_subdirectory(TestAll)
add_subdirectory(NoInRelease)   
