message("CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
message("CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")

include_directories(${CMAKE_SOURCE_DIR}/tests)

set(GTEST true)
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "5.0.0")
    message("WARNING: Some tests are disabled due to version of GCC compiler !!!")
    set(GTEST false)
  endif()
endif()

if(GTEST)
  find_package(GTest CONFIG QUIET)
  if(NOT GTest_FOUND)
    find_package(GTest QUIET)
  endif()
  if (NOT GTest_FOUND)
    message("WARNING: GTest not found. gtest-based tests are disabled. Hint: configure with vcpkg toolchain or set GTest_DIR.")
  else()
    add_library(gtest INTERFACE)
    target_link_libraries(gtest INTERFACE GTest::gtest)

    add_library(gtest_main INTERFACE)
    target_link_libraries(gtest_main INTERFACE GTest::gtest_main)

    add_subdirectory(CallbackBackend)
    add_subdirectory(ChannelRedirect)
    add_subdirectory(ConsoleBackend)
    add_subdirectory(Collapse)
    add_subdirectory(FastFormat)
    add_subdirectory(FileManagerCounters)
    add_subdirectory(RetentionCleaner)
    add_subdirectory(FileArchivePolicy)
    if(USE_JSONCPP)
      add_subdirectory(FileBackendConfig)
    endif()
    add_subdirectory(SizeLimitPolicy)
    add_subdirectory(LevelFilter)
    add_subdirectory(OutputFlags)
    add_subdirectory(ProcessTemplate)
    if(TARGET logmefmt AND TARGET logmeobf)
      add_subdirectory(Tools)
    else()
      message("WARNING: logmefmt/logmeobf tests are disabled because LOGME_BUILD_TOOLS is OFF.")
    endif()
    add_subdirectory(ProcedurePrint)
    add_subdirectory(EnvironmentControl)
    add_subdirectory(ControlServerPolicy)
    add_subdirectory(TracePoints)
    add_subdirectory(ThreadField)
    add_subdirectory(ReentryGuard)
    add_subdirectory(SingleEvaluation)
    add_subdirectory(Precheck)
    if (MSVC)
      add_subdirectory(PreprocessorCompat)
      add_subdirectory(WindowsEventLogBackend)
    endif()
  endif()
endif()

if(USE_ZLIB)
  add_subdirectory(GzipCompression)
endif()
add_subdirectory(TestAll)
add_subdirectory(NoInRelease)   
add_subdirectory(CApi)
add_subdirectory(LogmeWebManual)
